crates/qwik-optimizer-oxc/tests/snapshots/example_capturing_fn_class.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";

export const App = component$(() => {
  function hola() {
    console.log("hola");
  }
  class Thing {}
  class Other {}

  return $(() => {
    hola();
    new Thing();
    return <div></div>;
  });
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_1_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_1_XXXXXXXXXXXX");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_component_1_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_1_XXXXXXXXXXXX = () => {
  hola();
  new Thing();
  return /* @__PURE__ */ _jsxSorted("div", null, null, null, 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'Thing' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'hola' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  }
]
